app-overflow Y and scroll to top fix

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -4,6 +4,7 @@
   color: #f2eef9;
   overflow: hidden;
   position: relative;
+  z-index: 1;
 }
 
 .hero_content {
