--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,7 +9,6 @@
   align-items: center;
   box-shadow: 0px 4px 60x rgba(0, 0, 0, 0.1);
   z-index: 1000;
-
   transition: all 0.5s ease-in-out;
 }
 
@@ -86,6 +85,10 @@
 }
 
 @media (max-width: 750px) {
+  .navbar{
+    min-height:60px;
+  }
+  
   .navbar_hamburger {
     display: flex;
     z-index: 10;
