--- a/src/index.css
+++ b/src/index.css
@@ -12,20 +12,20 @@ html, body{
   font-family:sans-serif;
   font-family:'Outfit',sans-serif;
   font-style:normal;
-  overflow-y:auto;
   display:flex;
   flex-direction:column;
   height:100%;
+  background-color: #0f0f1c;
 }
 
 .app_container{
   display:flex;
   flex-direction:column;
-  min-height:100dvh;
+  min-height:100vh;
 }
 
 .container{
-  min-height:100dvh;
+  min-height:100vh;
 }
 
 .wrapper{
